<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PositionalAudioCVTesting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="glass_voice_trigger">start eye-helper</string>
    <string name="angle">Angle:</string>
    <string name="height">Height:</string>
    <string name="distance">Distance</string>
    <string name="azimuth">Azimuth:</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>


    <!-- Camera -->
    <string name="no_camera_found">No Camera Found</string>

</resources>
