<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.opencv.android.JavaCameraView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/camera_view"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/angle"
        android:id="@+id/text_view_angle"
        android:layout_gravity="start|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/height"
        android:id="@+id/text_view_height"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/distance"
        android:id="@+id/text_view_distance"
        android:layout_gravity="end|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/azimuth"
        android:id="@+id/text_view_azimuth"
        android:layout_gravity="start|bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pitch"
        android:id="@+id/text_view_pitch"
        android:layout_gravity="center_horizontal|bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roll"
        android:id="@+id/text_view_roll"
        android:layout_gravity="end|bottom" />

    <Button
        android:id="@+id/send_image"
        android:text="test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</FrameLayout>